--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-html{
+html,body{
 
     margin:0;
     padding: 0;
@@ -13,9 +13,15 @@ body{
     background-color:#ECFEFD;
 
 }
-.logo_tws >div{
+.logo_tws{
     display: flex;
 }
-.box_img_sponsors > div{
-    display: flex;
-}
+    .txt_tws_logo{
+
+        font-size: 3.5em;
+        margin: 0 5px 0 5px; 
+    }
+    .txt_corp_logo{
+
+        margin: 25px 0 0 5px; 
+    }
